// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold snapshots > next + ai 1`] = `
"// FILE: components/ScaffoldGrid.tsx
import React, { useState, useRef } from "react";
import { DataEditor, type DataEditorRef } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow } from "tengrids-schema";
import "tengrids/dist/index.css";
import { useAiCells, type AiProvider } from "tengrids-ai";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

const provider: AiProvider = {
    complete: async () => "",
};

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const gridRef = useRef<DataEditorRef | null>(null);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const ai = useAiCells({
        provider,
        columns: grid.columns,
        getCellContent: grid.getCellContent,
        gridRef,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <DataEditor ref={gridRef} {...grid} getCellContent={ai.getCellContent} customRenderers={ai.customRenderers} onVisibleRegionChanged={ai.onVisibleRegionChanged} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}

// FILE: pages/scaffold-scratch.tsx
import dynamic from "next/dynamic";
import React from "react";

const TengridsGrid = dynamic(() => import("../components/ScaffoldGrid"), { ssr: false });

export default function ScaffoldPage() {
    return <TengridsGrid />;
}
"
`;

exports[`scaffold snapshots > next + filters + ai 1`] = `
"// FILE: components/ScaffoldGrid.tsx
import React, { useState, useRef } from "react";
import { DataEditor, type DataEditorRef } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow, useGridFilters, FilterRail } from "tengrids-schema";
import "tengrids/dist/index.css";
import "tengrids-schema/dist/index.css";
import { useAiCells, type AiProvider } from "tengrids-ai";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

const provider: AiProvider = {
    complete: async () => "",
};

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const gridRef = useRef<DataEditorRef | null>(null);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const filters = useGridFilters({
        fields: schema.filterFields(),
        columns: grid.columns,
        rows: grid.rows,
        getCellContent: grid.getCellContent,
    });
    const ai = useAiCells({
        provider,
        columns: grid.columns,
        getCellContent: filters.getCellContent,
        gridRef,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <FilterRail filters={filters} />
            <DataEditor ref={gridRef} {...grid} rows={filters.rows} getCellContent={ai.getCellContent} customRenderers={ai.customRenderers} onVisibleRegionChanged={ai.onVisibleRegionChanged} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}

// FILE: pages/scaffold-scratch.tsx
import dynamic from "next/dynamic";
import React from "react";

const TengridsGrid = dynamic(() => import("../components/ScaffoldGrid"), { ssr: false });

export default function ScaffoldPage() {
    return <TengridsGrid />;
}
"
`;

exports[`scaffold snapshots > next + filters 1`] = `
"// FILE: components/ScaffoldGrid.tsx
import React, { useState } from "react";
import { DataEditor } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow, useGridFilters, FilterRail } from "tengrids-schema";
import "tengrids/dist/index.css";
import "tengrids-schema/dist/index.css";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const filters = useGridFilters({
        fields: schema.filterFields(),
        columns: grid.columns,
        rows: grid.rows,
        getCellContent: grid.getCellContent,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <FilterRail filters={filters} />
            <DataEditor {...grid} rows={filters.rows} getCellContent={filters.getCellContent} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}

// FILE: pages/scaffold-scratch.tsx
import dynamic from "next/dynamic";
import React from "react";

const TengridsGrid = dynamic(() => import("../components/ScaffoldGrid"), { ssr: false });

export default function ScaffoldPage() {
    return <TengridsGrid />;
}
"
`;

exports[`scaffold snapshots > next default 1`] = `
"// FILE: components/ScaffoldGrid.tsx
import React, { useState } from "react";
import { DataEditor } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow } from "tengrids-schema";
import "tengrids/dist/index.css";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <DataEditor {...grid} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}

// FILE: pages/scaffold-scratch.tsx
import dynamic from "next/dynamic";
import React from "react";

const TengridsGrid = dynamic(() => import("../components/ScaffoldGrid"), { ssr: false });

export default function ScaffoldPage() {
    return <TengridsGrid />;
}
"
`;

exports[`scaffold snapshots > react + ai 1`] = `
"import React, { useState, useRef } from "react";
import { DataEditor, type DataEditorRef } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow } from "tengrids-schema";
import "tengrids/dist/index.css";
import { useAiCells, type AiProvider } from "tengrids-ai";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

const provider: AiProvider = {
    complete: async () => "",
};

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const gridRef = useRef<DataEditorRef | null>(null);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const ai = useAiCells({
        provider,
        columns: grid.columns,
        getCellContent: grid.getCellContent,
        gridRef,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <DataEditor ref={gridRef} {...grid} getCellContent={ai.getCellContent} customRenderers={ai.customRenderers} onVisibleRegionChanged={ai.onVisibleRegionChanged} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}
"
`;

exports[`scaffold snapshots > react + filters + ai 1`] = `
"import React, { useState, useRef } from "react";
import { DataEditor, type DataEditorRef } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow, useGridFilters, FilterRail } from "tengrids-schema";
import "tengrids/dist/index.css";
import "tengrids-schema/dist/index.css";
import { useAiCells, type AiProvider } from "tengrids-ai";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

const provider: AiProvider = {
    complete: async () => "",
};

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const gridRef = useRef<DataEditorRef | null>(null);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const filters = useGridFilters({
        fields: schema.filterFields(),
        columns: grid.columns,
        rows: grid.rows,
        getCellContent: grid.getCellContent,
    });
    const ai = useAiCells({
        provider,
        columns: grid.columns,
        getCellContent: filters.getCellContent,
        gridRef,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <FilterRail filters={filters} />
            <DataEditor ref={gridRef} {...grid} rows={filters.rows} getCellContent={ai.getCellContent} customRenderers={ai.customRenderers} onVisibleRegionChanged={ai.onVisibleRegionChanged} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}
"
`;

exports[`scaffold snapshots > react + filters 1`] = `
"import React, { useState } from "react";
import { DataEditor } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow, useGridFilters, FilterRail } from "tengrids-schema";
import "tengrids/dist/index.css";
import "tengrids-schema/dist/index.css";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    const filters = useGridFilters({
        fields: schema.filterFields(),
        columns: grid.columns,
        rows: grid.rows,
        getCellContent: grid.getCellContent,
    });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <FilterRail filters={filters} />
            <DataEditor {...grid} rows={filters.rows} getCellContent={filters.getCellContent} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}
"
`;

exports[`scaffold snapshots > react default 1`] = `
"import React, { useState } from "react";
import { DataEditor } from "tengrids";
import { createSchema, col, useSchemaGrid, type InferRow } from "tengrids-schema";
import "tengrids/dist/index.css";

const schema = createSchema({
    name: col.text({ title: "Name", width: 160 }),
    cost: col.number({ title: "Cost", format: "currency", currency: "USD", width: 110 }),
    status: col.enum({ title: "Status", values: ["draft", "active", "closed"] as const }),
    due: col.date({ title: "Due" }),
    paid: col.boolean({ title: "Paid" }),
    site: col.uri({ title: "Website" }),
    notes: col.markdown({ title: "Notes", readonly: true }),
});

type Row = InferRow<typeof schema>;

const initialRows: readonly Row[] = [
    {
        name: "Ada",
        cost: 12.5,
        status: "draft",
        due: new Date("2026-09-01"),
        paid: true,
        site: "https://example.com",
        notes: "_ok_",
    },
];

export default function TengridsGrid() {
    const [rows, setRows] = useState<readonly Row[]>(initialRows);
    const grid = useSchemaGrid(schema, rows, { onRowsChange: setRows });
    return (
        <div style={{ width: "100%", height: 500 }}>
            <DataEditor {...grid} width={800} height={460} />
            <div id="portal" style={{ position: "fixed", left: 0, top: 0, zIndex: 9999 }} />
        </div>
    );
}
"
`;
